# unga-resolutions

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: UN General Assembly Resolutions.ipynb  UNGA_Resolutions.ipynb  config.py  main.py  preprocessing.py  records.py  segments.py
src/analysis/: UNGA_Resolutions.ipynb
src/data/: 20231026_link_segments.csv
src/pipeline/: preprocessing.py  records.py  segments.py
src/pipeline/utils/: extract.py  load.py  transform.py
