[project]
name = "unga-resolutions"
dynamic = ["version"]
description = "Web scrape and ETL pipeline for UN General Assembly resolutions data"
authors = [{ name = "Elliott Steer", email = "essteer@pm.me" }]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "masquer==1.1.0",
    "numpy==1.26.0",
    "pandas>=2.2.2",
    "pre-commit==3.7.1",
    "requests>=2.31.0",
    "ruff==0.4.5",
    "tqdm>=4.66.1",
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["web-scraping", "etl", "data", "preprocessing"]
classifiers = [
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
documentation = "https://github.com/essteer/unga-resolutions/blob/main/README.md"
repository = "https://github.com/essteer/unga-resolutions"
issues = "https://github.com/essteer/unga-resolutions/issues"
